Final Flickering Fix™

--- a/client/colors.less
+++ b/client/colors.less
@@ -209,15 +209,19 @@ body {
           margin: 3px 8px;
           width: 153px;
           height: 173px;
-          img {
-            height: 153px;
-            width: 153px;
-          }
           canvas {
+            position: absolute;
             width: 153px;
             height: 153px;
+          }
+          img {
+            position: absolute;
+            height: 153px;
+            width: 153px;
           }
           div.title {
+            position: relative;
+            margin-top: 153px;
             color: #999;
             text-align: center;
             font-family: 'Cutive Mono', serif;
